name:           snaplet-mysql-simple
version:        0.2.2.0
synopsis:       mysql-simple snaplet for the Snap Framework
description:    This snaplet contains support for using the MariaDB and MySQL
                database with a Snap Framework application via the mysql-simple
                package. It also includes an untested authentication backend.
                Heavily based on snaplet-postgresql-simple by Doug Beardsley.
license:        BSD3
license-file:   LICENSE
author:         Tobias Florek
maintainer:     me@ibotty.net
build-type:     Simple
cabal-version:  >= 1.6
homepage:       https://github.com/ibotty/snaplet-mysql-simple
category:       Web, Snap

extra-source-files:  LICENSE
                   , Changelog.md

data-files:
  resources/db/devel.cfg
  resources/auth/devel.cfg

source-repository head
  type:     git
  location: https://github.com/ibotty/snaplet-mysql-simple.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.MysqlSimple
    Snap.Snaplet.Auth.Backends.MysqlSimple

  other-modules:
    Paths_snaplet_mysql_simple

  build-depends:
    base                       >= 4       && < 4.13,
    containers,
    errors,
    bytestring                 >= 0.9.1   && < 0.11,
    clientsession              >= 0.7.2   && < 0.10,
    configurator               >= 0.2     && < 0.4,
    lens                       >= 3.7.6   && < 4.18,
    lifted-base                >= 0.2     && < 0.3,
    monad-control              >= 1.0     && < 1.1,
    mtl                        >= 2       && < 3,
    mysql-simple               >= 0.2     && < 0.5,
    mysql                      >= 0.1     && < 0.2,
    resource-pool              >= 0.2     && < 0.3,
    snap                       >= 1.0     && < 1.2,
    text                       >= 0.11    && < 1.3,
    transformers               >= 0.2     && < 0.6,
    transformers-base          >= 0.4     && < 0.5,
    unordered-containers       >= 0.2     && < 0.3



  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
